# IronKey

./: .gitignore  Cargo.toml  IMG_0043.heic  README.md  write-usb.sh
.github/workflows/: pages.yml  release.yml
docs/: index.html
docs/architecture/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/getting-started/: index.html
docs/install/: index.html
docs/tools/: index.html
docs/user-guide/: index.html
ironkey-app/: Cargo.toml
ironkey-app/src/: main.rs
ironkey-browser/: Cargo.toml
ironkey-browser/src/: lib.rs  listing.rs  ops.rs  search.rs  viewer.rs
ironkey-drives/: Cargo.toml
ironkey-drives/src/: enumerate.rs  lib.rs  ops.rs  smart.rs
ironkey-mount/: Cargo.toml
ironkey-mount/src/: apfs.rs  bitlocker.rs  detect.rs  generic.rs  lib.rs  luks.rs  ntfs.rs
ironkey-terminal/: Cargo.toml
ironkey-terminal/src/: lib.rs  pty.rs  renderer.rs
ironkey-ui/: Cargo.toml
ironkey-ui/src/: app.rs  io_stats.rs  lib.rs  theme.rs
ironkey-ui/src/modals/: confirm.rs  file_viewer.rs  format.rs  info.rs  mod.rs  passphrase.rs  properties.rs
ironkey-ui/src/panels/: browser.rs  drives.rs  mod.rs  terminal.rs
ironkey-ui/src/widgets/: file_list.rs  hex_viewer.rs  mod.rs  partition_bar.rs  progress_overlay.rs
os/: build.sh  tools-manifest.toml
os/docs/: tools.md
os/grub/: grub.cfg
os/kernel/: .config
os/rootfs/etc/: starship.toml
os/rootfs/etc/live/: boot.conf
os/rootfs/etc/systemd/system/: ironkey.service
os/rootfs/etc/zsh/: ironkey-aliases.zsh  zshrc
xtask/: Cargo.toml
xtask/src/: main.rs
