[package]
name = "ironkey-mount"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
ironkey-drives = { path = "../ironkey-drives" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["mount", "fs"] }
