[package]
name = "ironkey-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
log.workspace = true
chrono.workspace = true
iced = { version = "0.14", features = ["image", "tokio"] }
sysinfo = "0.38"
ironkey-drives = { path = "../ironkey-drives" }
ironkey-mount = { path = "../ironkey-mount" }
ironkey-browser = { path = "../ironkey-browser" }
ironkey-terminal = { path = "../ironkey-terminal" }
